Fix overflow issue in about section with images, Change image sizes for gallery section and fix image position inside media query

--- a/styles/sass/_mediaQuery.scss
+++ b/styles/sass/_mediaQuery.scss
@@ -134,8 +134,9 @@ section#topPicks .banner{
     border-right: none;
   }
 
-  .gallery { flex-direction: column;
-    
+  .gallery { 
+    flex-direction: column;
+    align-items: center;
   }
   .hamburgerMenu{
     display: block;
